@@ -14,6 +14,7 @@
 * Added official support for Django 1.10.
 * Fixed a bug where plugin save would incorrectly be triggered on pressing
   command and then enter in Firefox.
+* fix template inheritance setting creates spurious migration (see #3479)
 
 
 === 3.4.1 (2016-10-04) ===
